Fixed spacing on contact page

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -260,17 +260,10 @@ main.contact a:hover {
     padding: 5%;
   }
 }
-main.contact label {
-  font-size: 3rem;
-  padding: 1%;
+main.contact .form {
+  margin: 5% 0%;
 }
-main.contact textarea {
-  font-size: 2rem;
-}
-main.contact input {
-  font-size: 2rem;
-}
-main.contact section {
+main.contact .contact {
   line-height: 2;
 }
 .meetTeam {
